--- a/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Pacientes Cadastrados";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    bool cadastroSucesso = TempData["CadastroSucesso"] as bool? ?? false;
 }
 
 <body>
@@ -52,6 +53,24 @@
                             }
                         </tbody>
                     </table>
+                    <div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="successModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="successModalLabel">Sucesso!</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Cadastrado com sucesso.
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 }
                 else
                 {
@@ -62,7 +81,14 @@
     </div>
 </body>
 
-
+@if (cadastroSucesso)
+{
+    <script>
+        $(document).ready(function () {
+            $('#successModal').modal('show');
+        });
+    </script>
+}
 
 
 
