feat: Melhora visual dos botoes em tela

--- a/Prontuario do Paciente Online/Views/Home/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
                                                 </td>
 
                                                 <td class="align-middle text-center">
-                                                    <span class="text-secondary text-xs font-weight-bold">@item.Prontuario.DataProntuario</span>
+                                                    <span class="text-secondary text-xs font-weight-bold">@item.Prontuario.DataProntuario.Date.ToString("dd/MM/yyyy")</span>
                                                 </td>
 
                                                 <td class="align-middle text-center text-sm">
