--- a/Prontuario do Paciente Online/Views/Prontuario/_AdicionarProntuarioPaciente.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/_AdicionarProntuarioPaciente.cshtml
@@ -95,8 +95,8 @@
                     </div>
                     <div class="modal-fixed-footer">
                         <div class="modal-footer ">
-                            <a href="@Url.Action("Index", "Prontuario")" type="button" class="btn btn-secondary">Fechar</a>
-                            <button type="submit" class="btn btn-success">Adicionar</button>
+                            <a href="@Url.Action("Index", "Prontuario")" type="button" class="btn btn-secondary btn-sm">Fechar</a>
+                            <button type="submit" class="btn btn-success btn-sm">Adicionar</button>
                         </div>
                     </div>
                 </form>
