--- a/Prontuario do Paciente Online/Views/Prontuario/_DetalhesProntuarioPaciente.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/_DetalhesProntuarioPaciente.cshtml
@@ -89,7 +89,7 @@
                     </div>
 
                     <div class="modal-footer ">
-                        <a href="@Url.Action("Index", "Prontuario")" type="button" class="btn btn-secondary">Fechar</a>
+                        <a href="@Url.Action("Index", "Prontuario")" type="button" class="btn btn-secondary btn-sm">Fechar</a>
                     </div>
                 </form>
             </div>
