--- a/Prontuario do Paciente Online/Views/Tecnologia/RegistrarUsuario.cshtml
+++ b/Prontuario do Paciente Online/Views/Tecnologia/RegistrarUsuario.cshtml
@@ -71,10 +71,9 @@
                             <input type="hidden" asp-for="Medico.Nome" />
                             <input type="hidden" asp-for="EnumStatusAcesso" value="1">
 
-                            <div class="mt-3">
-                                <button type="submit" onclick="CapturaNomeAcesso()" class="btn btn-primary btn-lg w-100">Registrar</button>
-                            </div>                           
-                        </div>
+                            <div class="d-flex justify-content-end">
+                                <button type="submit" onclick="CapturaNomeAcesso()" class="btn btn-primary btn-sm">Registrar</button>
+                            </div>
                     </form>
                 </table>
             </div>
